# ai-toolkit

desktop/: .gitignore  README.md  build-portable.py  package.json
desktop/src-tauri/: Cargo.toml  build.rs  longpath.manifest  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/ui/: index.html  main.js  styles.css
